<resources>
    <string name="app_name">Final Pizza</string>

    <string name="extra_large_size_descr">Extra\n20\"</string>
    <string name="large_size_descr">Large\n16\"</string>
    <string name="medium_size_descr">Medium\n14\"</string>
    <string name="small_size_descr">Small\n12\"</string>
    <string name="pineapple">Pineapple</string>
    <string name="chili">Chili</string>
    <string name="olives">Olives</string>
    <string name="shrimp">Shrimp</string>
    <string name="cheese">Cheese</string>
    <string name="pepperoni">Pepperoni</string>

    <string name="card_hint">XXXX XXXX XXXX XXXX</string>
    <string name="date_hint">MM/YYYY</string>
    <string name="card_background">cardBackground</string>
    <string name="type_of_card">type of card</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="flat_number">Flat Number</string>
    <string name="back">Back</string>
    <string name="confirm">Confirm</string>
    <string name="logo">logo</string>
    <string name="if_no_orders_image">if no orders immage</string>
    <string name="it_s_time_to_buy_a_pizza">It\'s time to buy a Pizza</string>
    <string name="try_again">Try Again</string>
    <string name="state_image">sate immage</string>
    <string name="pizza_type">Pizza Type</string>
    <string name="customer_name">Customer Name</string>
    <string name="address">Address</string>
    <string name="price">price</string>
    <string name="topping">topping</string>
    <string name="date">Date</string>
    <string name="format_price">%.2f$</string>

</resources>