<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/orderItemStatusImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:focusable="false"
        android:gravity="clip_horizontal|center"
        app:layout_constraintBottom_toTopOf="@+id/orderItemDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.1"
        app:srcCompat="@android:drawable/presence_away"
        android:contentDescription="@string/state_image" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.35">

        <TextView
            android:id="@+id/orderItemCustomerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:lines="3"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/customer_name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/orderItemPizzaType"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="fill"
            android:lines="2"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/pizza_type"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/orderItemStatusImage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintWidth_percent="0.55">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/orderItemAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:gravity="fill"
                    android:lines="3"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/address"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/orderItemPrice"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:gravity="center"
                    android:text="@string/price"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/orderItemTopping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:lines="3"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/topping"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/orderItemDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/date"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>